[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
autocfg = "1.1.0"
cfg-if = "1.0.0"
clap = "4.4.6"
crc = "3.0.1"
itoa = "1.0.9"
lazycell = "1.3.0"
libc = "0.2.148"
proc-macro2 = "1.0.67"
rand = "0.8.5"
rand_core = "0.6.4"
serde = "1.0.188"
serde_json = "1.0.107"
structopt = "0.3.26"
